Adding the RIGR paper reference for completeness (#1308)
Co-authored-by: Jackson Burns <33505528+JacksonBurns@users.noreply.github.com>

--- a/examples/rigr_featurizer.ipynb
+++ b/examples/rigr_featurizer.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RIGR is introduced and discussed in our work [RIGR: Resonance Invariant Graph Representation for Molecular Property Prediction](). It is a featurizer implemented as part of Chemprop v2.1.2, designed to impose strict resonance invariance for molecular property prediction tasks. It ensures a single graph representation of different resonance structures of the same molecule, including non-equivalent resonance forms. For CLI users, RIGR is available as a choice for the multi-hot atom featurization scheme. To use RIGR, add the following argument to your training or inference script:\n",
+    "RIGR is introduced and discussed in our work [RIGR: Resonance-Invariant Graph Representation for Molecular Property Prediction](https://doi.org/10.1021/acs.jcim.5c00495) [1]. It is a featurizer implemented as part of Chemprop v2.1.2, designed to impose strict resonance invariance for molecular property prediction tasks. It ensures a single graph representation of different resonance structures of the same molecule, including non-equivalent resonance forms. For CLI users, RIGR is available as a choice for the multi-hot atom featurization scheme. To use RIGR, add the following argument to your training or inference script:\n",
     "   ```bash\n",
     "   --multi-hot-atom-featurizer-mode RIGR\n",
     "   ```\n",
@@ -20,7 +20,11 @@
     "   rigr_atom_featurizer = RIGRAtomFeaturizer()\n",
     "   rigr_bond_featurizer = RIGRBondFeaturizer()\n",
     "   featurizer = featurizers.SimpleMoleculeMolGraphFeaturizer(atom_featurizer=rigr_atom_featurizer, bond_featurizer=rigr_bond_featurizer)\n",
-    "   ```"
+    "   ```\n",
+    "\n",
+    "**References:**\n",
+    "\n",
+    "[1] Zalte, A. S.; Pang, H.-W.; Doner, A. C.; Green, W. H. \"RIGR: Resonance-Invariant Graph Representation for Molecular Property Prediction.\" J. Chem. Inf. Model. 2025, 65 (20), 10832–10843. [https://doi.org/10.1021/acs.jcim.5c00495](https://doi.org/10.1021/acs.jcim.5c00495)"
    ]
   },
   {
