--- a/examples/chemeleon_foundation_finetuning.ipynb
+++ b/examples/chemeleon_foundation_finetuning.ipynb
@@ -19,7 +19,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -55,7 +55,7 @@
                 {
                     "data": {
                         "text/plain": [
-                            "('chemeleon_mp.pt', <http.client.HTTPMessage at 0x708c2fc983e0>)"
+                            "('chemeleon_mp.pt', <http.client.HTTPMessage at 0x75ba07670b10>)"
                         ]
                     },
                     "execution_count": 2,
@@ -284,7 +284,7 @@
                 "    enable_progress_bar=True,\n",
                 "    accelerator=\"auto\",\n",
                 "    devices=1,\n",
-                "    max_epochs=20, # number of epochs to train for\n",
+                "    max_epochs=2, # Set to 2 for demonstration. Adjust as needed for actual training.\n",
                 "    callbacks=[checkpointing], # Use the configured checkpoint callback\n",
                 ")"
             ]
@@ -362,7 +362,7 @@
                 {
                     "data": {
                         "application/vnd.jupyter.widget-view+json": {
-                            "model_id": "c1132a23a08a455294fab44b5b27560c",
+                            "model_id": "b0e4414ad1084308a02be93ed5834350",
                             "version_major": 2,
                             "version_minor": 0
                         },
@@ -394,7 +394,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "`Trainer.fit` stopped: `max_epochs=20` reached.\n"
+                        "`Trainer.fit` stopped: `max_epochs=2` reached.\n"
                     ]
                 },
                 {
@@ -422,14 +422,14 @@
                     "output_type": "stream",
                     "text": [
                         "/home/knathan/anaconda3/envs/chemprop/lib/python3.11/site-packages/lightning/pytorch/trainer/connectors/checkpoint_connector.py:149: `.test(ckpt_path=None)` was called without a model. The best model of the previous `fit` call will be used. You can pass `.test(ckpt_path='best')` to use the best model or `.test(ckpt_path='last')` to use the last model. If you pass a value, this warning will be silenced.\n",
-                        "Restoring states from the checkpoint path at /home/knathan/chemprop/examples/checkpoints/best-epoch=16-val_loss=0.46.ckpt\n",
-                        "Loaded model weights from the checkpoint at /home/knathan/chemprop/examples/checkpoints/best-epoch=16-val_loss=0.46.ckpt\n"
+                        "Restoring states from the checkpoint path at /home/knathan/chemprop/examples/checkpoints/best-epoch=1-val_loss=0.84.ckpt\n",
+                        "Loaded model weights from the checkpoint at /home/knathan/chemprop/examples/checkpoints/best-epoch=1-val_loss=0.84.ckpt\n"
                     ]
                 },
                 {
                     "data": {
                         "application/vnd.jupyter.widget-view+json": {
-                            "model_id": "0fff0b11013c4c2e8e1a3ee1f8f95a8d",
+                            "model_id": "539019d857da49209de3dd2391e10308",
                             "version_major": 2,
                             "version_minor": 0
                         },
@@ -453,8 +453,8 @@
                             "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
                             "┃<span style=\"font-weight: bold\">        Test metric        </span>┃<span style=\"font-weight: bold\">       DataLoader 0        </span>┃\n",
                             "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-                            "│<span style=\"color: #008080; text-decoration-color: #008080\">         test/mae          </span>│<span style=\"color: #800080; text-decoration-color: #800080\">    0.4922657012939453     </span>│\n",
-                            "│<span style=\"color: #008080; text-decoration-color: #008080\">         test/rmse         </span>│<span style=\"color: #800080; text-decoration-color: #800080\">    0.5872646570205688     </span>│\n",
+                            "│<span style=\"color: #008080; text-decoration-color: #008080\">         test/mae          </span>│<span style=\"color: #800080; text-decoration-color: #800080\">    0.6668714284896851     </span>│\n",
+                            "│<span style=\"color: #008080; text-decoration-color: #008080\">         test/rmse         </span>│<span style=\"color: #800080; text-decoration-color: #800080\">    0.9082838892936707     </span>│\n",
                             "└───────────────────────────┴───────────────────────────┘\n",
                             "</pre>\n"
                         ],
@@ -462,8 +462,8 @@
                             "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
                             "┃\u001b[1m \u001b[0m\u001b[1m       Test metric       \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      DataLoader 0       \u001b[0m\u001b[1m \u001b[0m┃\n",
                             "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-                            "│\u001b[36m \u001b[0m\u001b[36m        test/mae         \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m   0.4922657012939453    \u001b[0m\u001b[35m \u001b[0m│\n",
-                            "│\u001b[36m \u001b[0m\u001b[36m        test/rmse        \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m   0.5872646570205688    \u001b[0m\u001b[35m \u001b[0m│\n",
+                            "│\u001b[36m \u001b[0m\u001b[36m        test/mae         \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m   0.6668714284896851    \u001b[0m\u001b[35m \u001b[0m│\n",
+                            "│\u001b[36m \u001b[0m\u001b[36m        test/rmse        \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m   0.9082838892936707    \u001b[0m\u001b[35m \u001b[0m│\n",
                             "└───────────────────────────┴───────────────────────────┘\n"
                         ]
                     },
@@ -488,7 +488,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "chemprop_dev",
+            "display_name": "chemprop",
             "language": "python",
             "name": "python3"
         },
@@ -502,7 +502,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.12.9"
+            "version": "3.11.12"
         },
         "orig_nbformat": 4
     },
