--- a/docs/source/tutorial/python/loss_functions.ipynb
+++ b/docs/source/tutorial/python/loss_functions.ipynb
@@ -70,7 +70,9 @@
       "earthmovers\n",
       "wasserstein\n",
       "quantile\n",
-      "pinball\n"
+      "pinball\n",
+      "quantile-point\n",
+      "pinball-point\n"
      ]
     }
    ],
@@ -428,6 +430,15 @@
      ]
     }
    ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The return type of make_split_indices has changed in v2.1 - see help(make_split_indices)\n"
+     ]
+    }
+   ],
    "source": [
     "chemprop_dir = Path.cwd().parents[3]\n",
     "input_path = chemprop_dir / \"tests\" / \"data\" / \"classification\" / \"mol_multiclass.csv\"\n",
@@ -484,12 +495,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/jackson/miniconda3/envs/chemprop_dev/lib/python3.12/site-packages/torch/cuda/__init__.py:734: UserWarning: Can't initialize NVML\n",
+      "  warnings.warn(\"Can't initialize NVML\")\n",
       "💡 Tip: For seamless cloud uploads and versioning, try installing [litmodels](https://pypi.org/project/litmodels/) to enable LitModelCheckpoint, which syncs automatically with the Lightning model registry.\n",
       "GPU available: False, used: False\n",
       "TPU available: False, using: 0 TPU cores\n",
       "Loading `train_dataloader` to estimate number of stepping batches.\n",
-      "/home/knathan/anaconda3/envs/chemprop/lib/python3.11/site-packages/lightning/pytorch/trainer/connectors/data_connector.py:434: The 'train_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=11` in the `DataLoader` to improve performance.\n",
-      "/home/knathan/anaconda3/envs/chemprop/lib/python3.11/site-packages/lightning/pytorch/loops/fit_loop.py:317: The number of training batches (7) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n"
+      "/home/jackson/miniconda3/envs/chemprop_dev/lib/python3.12/site-packages/lightning/pytorch/trainer/connectors/data_connector.py:434: The 'train_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=15` in the `DataLoader` to improve performance.\n",
+      "/home/jackson/miniconda3/envs/chemprop_dev/lib/python3.12/site-packages/lightning/pytorch/loops/fit_loop.py:317: The number of training batches (7) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n"
      ]
     },
     {
@@ -550,13 +563,16 @@
     },
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fc5089129e94df39bc61d9acc5bd378",
-       "version_major": 2,
-       "version_minor": 0
-      },
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">/home/jackson/miniconda3/envs/chemprop_dev/lib/python3.12/site-packages/rich/live.py:231: UserWarning: install \n",
+       "\"ipywidgets\" for Jupyter support\n",
+       "  warnings.warn('install \"ipywidgets\" for Jupyter support')\n",
+       "</pre>\n"
+      ],
       "text/plain": [
-       "Output()"
+       "/home/jackson/miniconda3/envs/chemprop_dev/lib/python3.12/site-packages/rich/live.py:231: UserWarning: install \n",
+       "\"ipywidgets\" for Jupyter support\n",
+       "  warnings.warn('install \"ipywidgets\" for Jupyter support')\n"
       ]
      },
      "metadata": {},
@@ -565,15 +581,15 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">/home/knathan/anaconda3/envs/chemprop/lib/python3.11/site-packages/lightning/pytorch/trainer/connectors/data_connec\n",
-       "tor.py:434: The 'val_dataloader' does not have many workers which may be a bottleneck. Consider increasing the \n",
-       "value of the `num_workers` argument` to `num_workers=11` in the `DataLoader` to improve performance.\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">/home/jackson/miniconda3/envs/chemprop_dev/lib/python3.12/site-packages/lightning/pytorch/trainer/connectors/data_c\n",
+       "onnector.py:434: The 'val_dataloader' does not have many workers which may be a bottleneck. Consider increasing the\n",
+       "value of the `num_workers` argument` to `num_workers=15` in the `DataLoader` to improve performance.\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "/home/knathan/anaconda3/envs/chemprop/lib/python3.11/site-packages/lightning/pytorch/trainer/connectors/data_connec\n",
-       "tor.py:434: The 'val_dataloader' does not have many workers which may be a bottleneck. Consider increasing the \n",
-       "value of the `num_workers` argument` to `num_workers=11` in the `DataLoader` to improve performance.\n"
+       "/home/jackson/miniconda3/envs/chemprop_dev/lib/python3.12/site-packages/lightning/pytorch/trainer/connectors/data_c\n",
+       "onnector.py:434: The 'val_dataloader' does not have many workers which may be a bottleneck. Consider increasing the\n",
+       "value of the `num_workers` argument` to `num_workers=15` in the `DataLoader` to improve performance.\n"
       ]
      },
      "metadata": {},
@@ -583,6 +599,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/jackson/miniconda3/envs/chemprop_dev/lib/python3.12/site-packages/torch/cuda/__init__.py:734: UserWarning: Can't initialize NVML\n",
+      "  warnings.warn(\"Can't initialize NVML\")\n",
       "`Trainer.fit` stopped: `max_epochs=2` reached.\n"
      ]
     },
@@ -597,24 +615,10 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7f08bc46a9a466996f7155f2748c2c7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/knathan/anaconda3/envs/chemprop/lib/python3.11/site-packages/lightning/pytorch/trainer/connectors/data_connector.py:434: The 'test_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=11` in the `DataLoader` to improve performance.\n"
+      "/home/jackson/miniconda3/envs/chemprop_dev/lib/python3.12/site-packages/lightning/pytorch/trainer/connectors/data_connector.py:434: The 'test_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=15` in the `DataLoader` to improve performance.\n"
      ]
     },
     {
@@ -650,6 +654,16 @@
     },
     {
      "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/plain": [
        "[{'test/multiclass-mcc': 0.0}]"
       ]
@@ -668,7 +682,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "chemprop",
+   "display_name": "chemprop_dev",
    "language": "python",
    "name": "python3"
   },
@@ -682,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
